In Development:
# Mentioning Check 0.9.14 for now, to fix distcheck target until next release

 * Fix issue with string formatting in ck_assert(), where using
  the % operator would be interpreted as a string formatter. Bug #96.


Sat July 26, 2014: Released Check 0.9.14
  based on r1174 (2014-07-03 18:43:49 +0000)

* Changes to (unofficially for now) support Solaris and AIX platforms.

* Fix issue with checked teardown functions in CK_NOFORK mode. If
  the teardown function called an assertion that failed, an
  infinate loop would result. Bug#98. As a result of the change, for now
  checked teardown functions that fail in CK_NOFORK mode will
  not cause the test to fail.

* Allow checked fixtures when compiled without fork(). Previously
  such setup/teardown functions were disabled, as the full contract
  for checked fixtures could not be honored. Checked fixtures
  in CK_NOFORK mode are now closer to the contract, and are now
  enabled.

* Various code cleanup, including changes for compiling Check on
  c++ compilers Clang and g++ (which are less forgiving than their
  c counterparts).

* Re-enable internal unit tests, which verify which line numbers are
  reported for unit test failures. (The tests were unintentionally
  disabled in a previous release).


Fri May 30, 2014: Released Check 0.9.13
  based on r1137 (2014-05-26 21:03:09 +0000)

* When a test assertion fails, exit() was invoked. This results in any
  registered exit handlers being invoked. A test should not be relied
  upon to clean up if it fails. Instead, _exit() will be used to signal
  a test failure, to prevent exit handlers from being invoked.

* Fix issue with string formatting in ck_assert_(u)int_* calls, where using
  the % operator would be interpreted as a string formatter. Bug #96.

* If the LOG/XML/TAP file name is set to "-" either through the
  srunner_set_log() srunner_set_xml() or srunner_set_tap() calls
  or through the related environment variables, the logged data will be